--- a/public/static/style.css
+++ b/public/static/style.css
@@ -14,6 +14,7 @@ html, body {
     background-position: center;
     background-size: cover;
     min-height: 80vh;
+    position: relative;
 }
 .head {
     display: flex;
