--- a/public/static/tour.css
+++ b/public/static/tour.css
@@ -6,7 +6,9 @@ body {
     background-position: center;
     background-size: cover;
 }
-
+.main {
+    position: relative;
+}
 .main h1 {
     position: relative;
     text-align: center;
@@ -32,6 +34,7 @@ body {
     align-items: center;
     gap:5vw;
     margin: 20px;
+    flex-wrap: wrap;
 }
 .tour-card img{
     width: 400px;
@@ -43,7 +46,7 @@ body {
   overflow: hidden;
   margin: 2vh 0vh;
   width:550px;
-  height: 200px;
+  
   background-color: rgba(103, 102, 102, 0.5);
   padding: 50px;
   display: flex;
@@ -51,6 +54,7 @@ body {
   justify-content: center;
   line-height: 30px;
   border-radius: 8px;
+  height: fit-content;
 }
 .right {
     flex-direction: row-reverse;
@@ -71,4 +75,13 @@ body {
   line-height: 30px;
   border-radius: 8px;
   margin: 2vh 0vh;
+}
+
+@media (max-width:750px)
+{
+.tour-card img
+{
+    width: 300px;
+    height: 200px;
+}
 }
