--- a/views/about.ejs
+++ b/views/about.ejs
@@ -13,13 +13,18 @@
 <body>
     <section class="main">
     <header>
+            <input type="checkbox" id="nav-toggle" class="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label">
+            <span></span>
+        </label>
+
         <nav>
             <a href="/">Home</a>
             <a href="/about">About</a>
             <a href="/tours">Hot tours</a>
             <a href="/contact">Contact</a>
         </nav>
-        <button class="blue">Book Now</button>
+        <button class="blue" onclick="window.location.href='/form'">Book Now</button>
     </header>
     <h2 class="section-tag">ABOUT US</h2>
     <h1>More Than Trips. We Create Memories.</h1>
