--- a/views/tours.ejs
+++ b/views/tours.ejs
@@ -10,13 +10,18 @@
 <body>
     <section class="main">
     <header>
+          <input type="checkbox" id="nav-toggle" class="nav-toggle">
+  <label for="nav-toggle" class="nav-toggle-label">
+    <span></span>
+  </label>
+
         <nav>
             <a href="/">Home</a>
             <a href="/about">About</a>
             <a href="/tours">Hot tours</a>
             <a href="/contact">Contact</a>
         </nav>
-        <button class="blue">Book Now</button>
+       <button class="blue" onclick="window.location.href='/form'">Book Now</button>
     </header>
 
     <h1>Explore our exciting tour offers</h1>
@@ -32,7 +37,7 @@
             <p><strong>2</strong> Nights Stay</p>
             <p>Fun Activites</p>
             <p><strong>Price:</strong> $999</p>
-            <button class="blue">Book Now</button>
+           <button class="blue" onclick="window.location.href='/form'">Book Now</button>
             </div>
         </div>
         <div class="tour-card">
@@ -45,7 +50,7 @@
             <p><strong>3</strong> Nights stay</p>
             <p>Delicious Lunch and Dinner</p>
             <p><strong>Price:</strong> $1,299</p>
-            <button class="blue">Book Now</button>
+           <button class="blue" onclick="window.location.href='/form'">Book Now</button>
             </div>
         </div>
         <div class="tour-card right">
@@ -58,7 +63,7 @@
             <p><strong>5</strong> Nights Stay</p>
             <p>Participation in Chinese New Year</p>
             <p><strong>Price:</strong> $1,199</p>
-            <button class="blue">Book Now</button>
+           <button class="blue" onclick="window.location.href='/form'">Book Now</button>
             </div>
         </div>
         <div class="tour-card">
@@ -71,14 +76,14 @@
             <p><strong>3</strong> Nights Stay</p>
             <p>All Meals Included</p>
             <p><strong>Price:</strong> $2,499</p>
-            <button class="blue">Book Now</button>
+           <button class="blue" onclick="window.location.href='/form'">Book Now</button>
             </div>
         </div>
         <div class="tour-card">
             <div class="offer">
                 <h1>Didn't like our offer</h1>
                 <h3>Book according to your requirements</h3>
-                <button class="blue">Book Now</button>
+               <button class="blue" onclick="window.location.href='/form'">Book Now</button>
             </div>
         </div>
     </section>
