--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,8 +13,8 @@
 <body>
     <section class="main">
     <header>
-          <input type="checkbox" id="nav-toggle" class="nav-toggle">
-  <label for="nav-toggle" class="nav-toggle-label">
+        <input type="checkbox" id="nav-toggle" class="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label">
     <span></span>
   </label>
         <nav>
@@ -23,9 +23,7 @@
             <a href="/tours">Hot tours</a>
             <a href="/contact">Contact</a>
         </nav>
-        <a href="/form">
-        <button class="blue">Book Now</button>
-        </a>
+        <button class="blue" onclick="window.location.href='/form'">Book Now</button>
     </header>
      <div class="head">
             <div class="social">
