Fixed broken link

--- a/views/form.ejs
+++ b/views/form.ejs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="static/form.css">
 </head>
 <body>
-    <form method="POST" action="/send-email">
+    <form method="POST" action="/send-mail">
         <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
 
@@ -19,6 +19,7 @@
                 <option>Mountain Adventure in NewZealend</option>
                 <option>Cultural Exploration with Chinese</option>
                 <option>Safari Expedition in Africa</option>
+                <option>Custom Trip</option>
             </select>
             <label for="message">Message:</label>
             <textarea id="message" name="message" rows="5" required></textarea>
